--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -48,19 +48,12 @@ jobs:
         run:  npm install
 
       - name: Test
-        run: |
-        if npm test; then
-          echo "Test succeeded" # Le test a réussi
-          echo "::set-output name=test-result::success" # Définir un statut personnalisé
-        else
-          echo "Test failed" # Le test a échoué
-          echo "::set-output name=test-result::failure" # Définir un statut personnalisé
-          exit 1 # Exit avec un code d'erreur pour indiquer que le test a échoué
-        fi
+        run: npm test
+        
       - name: Set GitHub status
         if: always() # Cette étape doit toujours s'exécuter, même en cas d'échec du test
         run: |
-          if [ "${{ steps.test-addition.outputs.test-result }}" == "success" ]; then
+          if [ "${{ job.status }}" == "success" ]; then
             echo "Tests succeeded"
           else
             echo "Tests failed"
@@ -68,6 +61,3 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-      
