--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,31 @@ on:
 
 jobs:
 
+  tag:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set version
+        run: |
+          LAST_TAG=$(git describe --abbrev=0 --tags 2>/dev/null || echo '0.0.0')
+          IFS='.' read -ra VERSION_PARTS <<< "$LAST_TAG"
+          MAJOR="${VERSION_PARTS[0]}"
+          MINOR="${VERSION_PARTS[1]}"
+          PATCH="${VERSION_PARTS[2]}"
+          ((PATCH++))
+          TAG_VERSION="$MAJOR.$MINOR.$PATCH"
+          echo "::set-env name=TAG_VERSION::$TAG_VERSION"
+
+      - name: Create Tag
+        if: success()
+        run: git tag -a $TAG_VERSION -m "Auto-generated tag for version $TAG_VERSION"
+
+      - name: Push Tag
+        if: success()
+        run: git push origin $TAG_VERSION
+
   build:
     name: Construction
     runs-on: ubuntu-latest
