--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,13 +21,19 @@ jobs:
 
       - name: Set version
         run: |
-          LAST_TAG=$(git describe --abbrev=0 --tags 2>/dev/null || echo '0.0.0')
-          IFS='.' read -ra VERSION_PARTS <<< "$LAST_TAG"
-          MAJOR="${VERSION_PARTS[0]}"
-          MINOR="${VERSION_PARTS[1]}"
-          PATCH="${VERSION_PARTS[2]}"
-          ((PATCH++))
-          TAG_VERSION="$MAJOR.$MINOR.$PATCH"
+          LAST_TAG=$(git describe --abbrev=0 --tags 2>/dev/null)
+          if [ -z "$LAST_TAG" ]; then
+            TAG_VERSION="1.0.0"
+          else
+            IFS='.' read -ra VERSION_PARTS <<< "$LAST_TAG"
+            MAJOR="${VERSION_PARTS[0]}"
+            MINOR="${VERSION_PARTS[1]}"
+            PATCH="${VERSION_PARTS[2]}"
+            ((PATCH++))
+            TAG_VERSION="$MAJOR.$MINOR.$PATCH"
+          fi
+          echo "LAST_TAG: $LAST_TAG"
+          echo "TAG_VERSION: $TAG_VERSION"
           echo "::set-env name=TAG_VERSION::$TAG_VERSION"
 
       - name: Create Tag
