--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,9 +21,9 @@ jobs:
         env:
           GIT_ASKPASS: echo
 
-      - name: Set version 
+      - name: Set version
         run: |
-          LAST_TAG=$(git describe --abbrev=0 --tags 2>/dev/null)
+          LAST_TAG=$(git describe --abbrev=0 --tags $(git rev-list --tags --max-count=1))
           if [ -z "$LAST_TAG" ]; then
             TAG_VERSION="1.0.0"
           else
@@ -36,7 +36,7 @@ jobs:
           fi
           echo "LAST_TAG: $LAST_TAG"
           echo "TAG_VERSION: $TAG_VERSION"
-          echo "::set-env name=TAG_VERSION::$TAG_VERSION"
+          echo "TAG_VERSION=$TAG_VERSION" >> $GITHUB_ENV
 
       - name: Create Tag
         if: success()
