--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,9 +32,20 @@ jobs:
           MAJOR="${VERSION_PARTS[0]}"
           MINOR="${VERSION_PARTS[1]}"
           PATCH="${VERSION_PARTS[2]}"
+
+          echo "VERSION_PARTS[0]"
+          echo "VERSION_PARTS[1]"
+          echo "VERSION_PARTS[2]"
+          echo "MAJOR"
+          echo "MINOR"
+          echo "PATCH"
+
+
           
           # Incrémenter le PATCH
           ((PATCH++))
+
+          echo "PATCH"
           
           # Créer le nouveau tag
           TAG_VERSION="$MAJOR.$MINOR.$PATCH"
