--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,10 +11,16 @@ on:
     tags:
       - '*'
 
+  workflow_run:
+    workflows: ["CI/CD Workflow"]
+    types:
+      - completed
+
 jobs:
 
   tag:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -40,7 +46,6 @@ jobs:
           echo "$TAG_VERSION" > version.txt
           echo "TAG_VERSION=$TAG_VERSION" >> $GITHUB_ENV
         shell: /usr/bin/bash -e {0}
-
 
   build:
     name: Construction
