--- a/.github/workflows/workflow-create-tag.yml
+++ b/.github/workflows/workflow-create-tag.yml
@@ -8,12 +8,10 @@ on:
 jobs:
   merge:
     runs-on: ubuntu-latest
-    if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true)
+    if: github.event.pull_request.merged == true
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        env:
-          GIT_ASKPASS: echo
 
       - name: Set version
         run: |
@@ -33,12 +31,16 @@ jobs:
 
           echo "$TAG_VERSION" > version.txt
           echo "TAG_VERSION=$TAG_VERSION" >> $GITHUB_ENV
-
-          # Créer un tag et le pousser
-          git tag -a $TAG_VERSION -m "Auto-generated tag for version $TAG_VERSION"
-          git push origin $TAG_VERSION
-
         shell: /usr/bin/bash -e {0}
 
+      - name: Configure Git Identity
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
 
-    
+      - name: Create Tag
+        run: |
+          git tag -a $TAG_VERSION -m "Auto-generated tag for version $TAG_VERSION"
+          git push origin $TAG_VERSION
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
