--- a/.github/workflows/workflow-create-tag.yml
+++ b/.github/workflows/workflow-create-tag.yml
@@ -31,7 +31,11 @@ jobs:
 
           echo "$TAG_VERSION" > version.txt
           echo "TAG_VERSION=$TAG_VERSION" >> $GITHUB_ENV
-        shell: /usr/bin/bash -e {0}
+          echo "::set-output name=MAJOR::$MAJOR"
+          echo "::set-output name=MINOR::$MINOR"
+          echo "::set-output name=PATCH::$PATCH"
+          echo "::set-output name=TAG_VERSION::$TAG_VERSION"
+          shell: /usr/bin/bash -e {0}
 
       - name: Configure Git Identity
         run: |
@@ -40,6 +44,11 @@ jobs:
 
       - name: Create Tag
         run: |
+          MAJOR=${{ steps.set_version.outputs.MAJOR }}
+          MINOR=${{ steps.set_version.outputs.MINOR }}
+          PATCH=${{ steps.set_version.outputs.PATCH }}
+          TAG_VERSION=${{ steps.set_version.outputs.TAG_VERSION }}
+
           git tag -a $TAG_VERSION -m "Auto-generated tag for version $TAG_VERSION"
           git push origin $TAG_VERSION
         env:
