--- a/.github/workflows/workflow-create-tag.yml
+++ b/.github/workflows/workflow-create-tag.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set version
+        id: set_version
         run: |
           # Récupérer la dernière version du fichier (si elle existe)
           LAST_VERSION=$(cat version.txt 2>/dev/null || echo "1.0.0")
@@ -30,12 +31,11 @@ jobs:
           echo "TAG_VERSION: $TAG_VERSION"
 
           echo "$TAG_VERSION" > version.txt
-          echo "TAG_VERSION=$TAG_VERSION" >> $GITHUB_ENV
-          echo "::set-output name=MAJOR::$MAJOR"
-          echo "::set-output name=MINOR::$MINOR"
-          echo "::set-output name=PATCH::$PATCH"
-          echo "::set-output name=TAG_VERSION::$TAG_VERSION"
-          shell: /usr/bin/bash -e {0}
+          echo "MAJOR=${MAJOR}" >> $GITHUB_ENV
+          echo "MINOR=${MINOR}" >> $GITHUB_ENV
+          echo "PATCH=${PATCH}" >> $GITHUB_ENV
+          echo "TAG_VERSION=${TAG_VERSION}" >> $GITHUB_ENV
+        shell: /usr/bin/bash -e {0}
 
       - name: Configure Git Identity
         run: |
@@ -44,10 +44,10 @@ jobs:
 
       - name: Create Tag
         run: |
-          MAJOR=${{ steps.set_version.outputs.MAJOR }}
-          MINOR=${{ steps.set_version.outputs.MINOR }}
-          PATCH=${{ steps.set_version.outputs.PATCH }}
-          TAG_VERSION=${{ steps.set_version.outputs.TAG_VERSION }}
+          MAJOR=${MAJOR}
+          MINOR=${MINOR}
+          PATCH=${PATCH}
+          TAG_VERSION=${TAG_VERSION}
 
           git tag -a $TAG_VERSION -m "Auto-generated tag for version $TAG_VERSION"
           git push origin $TAG_VERSION
