--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -92,10 +92,10 @@ jobs:
     if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@latest
+        uses: actions/checkout@v4
 
       - name: Installation Docker
-        uses: docker/setup-buildx-action@latest
+        uses: docker/setup-buildx-action@v3
 
       - name: Build bastoss bastosstonsoss/b-m-ci-cd:latest
         run: docker build --rm -t bastosstonsoss/b-m-ci-cd:latest .
@@ -113,16 +113,16 @@ jobs:
       - test-docker
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@latest
+        uses: actions/checkout@v4
 
       - name: Installation Docker
-        uses: docker/setup-buildx-action@latest
+        uses: docker/setup-buildx-action@v3
 
       - name: Build bastosstonsoss/b-m-ci-cd:${{github.ref_name}}
         run: docker build --rm -t bastosstonsoss/b-m-ci-cd:${{github.ref_name}} .
 
       - name: Connexion Docker Hub
-        uses: docker/login-action@latest
+        uses: docker/login-action@v3
         with:
           username: bastosstonsoss
           password: JeSaisPasCommentFaireSansRevelerMonMdp
