--- a/.github/workflows/workflow-create-tag.yml
+++ b/.github/workflows/workflow-create-tag.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           # Récupérer la dernière version du fichier (si elle existe)
           LAST_VERSION=$(cat version.txt 2>/dev/null || echo "1.0.0")
-          
+
           # Diviser la version en parties
           IFS='.' read -ra VERSION_PARTS <<< "$LAST_VERSION"
           MAJOR="${VERSION_PARTS[0]}"
@@ -26,7 +26,7 @@ jobs:
           PATCH="${VERSION_PARTS[2]}"
 
           ((PATCH=PATCH+1))
-          
+
           TAG_VERSION="$MAJOR.$MINOR.$PATCH"
           echo "TAG_VERSION: $TAG_VERSION"
 
@@ -52,4 +52,34 @@ jobs:
           git tag -a $TAG_VERSION -m "Auto-generated tag for version $TAG_VERSION"
           git push origin $TAG_VERSION
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  deploiment-image:
+    name: Push bastosstonsoss/b-m-ci-cd:latest
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    needs:
+      - lint
+      - test-addition
+      - test-docker
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
+      - name: Installation Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build bastosstonsoss/b-m-ci-cd:${{github.ref_name}}
+        run: docker build --rm -t bastosstonsoss/b-m-ci-cd:${{github.ref_name}} .
+
+      - name: Connexion Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: bastosstonsoss
+          password: ${{ secrets.PASSWORD_DOCKERHUB }}
+
+      - name: Tag bastosstonsoss/b-m-ci-cd:${{github.ref_name}}
+        run: docker tag bastosstonsoss/b-m-ci-cd:${{github.ref_name}} bastosstonsoss/b-m-ci-cd${{github.ref_name}}
+
+      - name: Push bastosstonsoss/b-m-ci-cd:${{github.ref_name}}
+        run: docker push bastosstonsoss/b-m-ci-cd:${{github.ref_name}}
