--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,7 +34,7 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+    if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'push' && github.ref_type == 'tag')
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -58,7 +58,7 @@ jobs:
   test-addition:
     name: Test de addition.js
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+    if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'push' && github.ref_type == 'tag')
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -89,7 +89,7 @@ jobs:
   test-docker:
     name: Build and Run Dockerfile
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
+    if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'push' && github.ref_type == 'tag')
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -102,3 +102,29 @@ jobs:
 
       - name: Run bastosstonsoss/b-m-ci-cd:latest
         run: docker run --name addition -p 3000:3000 -d bastosstonsoss/b-m-ci-cd:latest
+
+  deploiment-image:
+    name: Push bastosstonsoss/b-m-ci-cd:latest
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' && github.event.action == 'closed'
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
+      - name: Installation Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build bastosstonsoss/b-m-ci-cd:${{github.ref_name}}
+        run: docker build --rm -t bastosstonsoss/b-m-ci-cd:${{github.ref_name}} .
+
+      - name: Connexion Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: bastosstonsoss
+          password: ${{ secrets.PASSWORD_DOCKERHUB }}
+
+      - name: Tag bastosstonsoss/b-m-ci-cd:${{github.ref_name}}
+        run: docker tag bastosstonsoss/b-m-ci-cd:${{github.ref_name}} bastosstonsoss/b-m-ci-cd${{github.ref_name}}
+
+      - name: Push bastosstonsoss/b-m-ci-cd:${{github.ref_name}}
+        run: docker push bastosstonsoss/b-m-ci-cd:${{github.ref_name}}
