--- a/.github/workflows/workflow-create-tag.yml
+++ b/.github/workflows/workflow-create-tag.yml
@@ -53,3 +53,29 @@ jobs:
           git push origin $TAG_VERSION
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  deploiment-image:
+    name: Push bastosstonsoss/b-m-ci-cd:latest
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' && github.event.action == 'closed'
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
+      - name: Installation Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build bastosstonsoss/b-m-ci-cd:${{github.ref_name}}
+        run: docker build --rm -t bastosstonsoss/b-m-ci-cd:${{github.ref_name}} .
+
+      - name: Connexion Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: bastosstonsoss
+          password: ${{ secrets.PASSWORD_DOCKERHUB }}
+
+      - name: Tag bastosstonsoss/b-m-ci-cd:${{github.ref_name}}
+        run: docker tag bastosstonsoss/b-m-ci-cd:${{github.ref_name}} bastosstonsoss/b-m-ci-cd${{github.ref_name}}
+
+      - name: Push bastosstonsoss/b-m-ci-cd:${{github.ref_name}}
+        run: docker push bastosstonsoss/b-m-ci-cd:${{github.ref_name}}
