--- a/.github/workflows/workflow-create-tag.yml
+++ b/.github/workflows/workflow-create-tag.yml
@@ -13,46 +13,29 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set version
+     - name: Set version
         id: set_version
         run: |
-          # Récupérer la dernière version du fichier (si elle existe)
-          LAST_VERSION=$(cat version.txt 2>/dev/null || echo "1.0.0")
-
+          # Récupérer la dernière version du dernier tag (si elle existe)
+          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
+          
+          # Extraire la version à partir du tag
+          LAST_VERSION=$(echo "$LAST_TAG" | sed 's/v//'   
           # Diviser la version en parties
           IFS='.' read -ra VERSION_PARTS <<< "$LAST_VERSION"
           MAJOR="${VERSION_PARTS[0]}"
           MINOR="${VERSION_PARTS[1]}"
-          PATCH="${VERSION_PARTS[2]}"
-
+          PATCH="${VERSION_PARTS[2]}    
           ((PATCH=PATCH+1))
-
+          
           TAG_VERSION="$MAJOR.$MINOR.$PATCH"
-          echo "TAG_VERSION: $TAG_VERSION"
-
+          echo "TAG_VERSION: $TAG_VERSION   
           echo "$TAG_VERSION" > version.txt
           echo "MAJOR=${MAJOR}" >> $GITHUB_ENV
           echo "MINOR=${MINOR}" >> $GITHUB_ENV
           echo "PATCH=${PATCH}" >> $GITHUB_ENV
           echo "TAG_VERSION=${TAG_VERSION}" >> $GITHUB_ENV
         shell: /usr/bin/bash -e {0}
-
-      - name: Configure Git Identity
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-
-      - name: Create Tag
-        run: |
-          MAJOR=${MAJOR}
-          MINOR=${MINOR}
-          PATCH=${PATCH}
-          TAG_VERSION=${TAG_VERSION}
-
-          git tag -a $TAG_VERSION -m "Auto-generated tag for version $TAG_VERSION"
-          git push origin $TAG_VERSION
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   deploiment-image:
     name: Push bastosstonsoss/b-m-ci-cd:latest
